--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
-node_modules/
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/api-server/node_modules/
+/frontend/node_modules/
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.eslintrc.json
+yarn.lock
